--- a/index.html
+++ b/index.html
@@ -5,203 +5,223 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's shoes</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <div class="head">
-      <div class="inner">
-        <a class="loge" href="#x">
-          <img src="/images/logo.png" alt="" />
-        </a>
-        <ul class="nav">
-          <li><a href="#x">Women</a></li>
-          <li><a href="#x">Men</a></li>
-          <li><a href="#x">Kids</a></li>
-          <li><a href="#x">Accessories</a></li>
-          <li><a href="#x">Sale</a></li>
-        </ul>
-        <ul class="top_menu">
-          <li>
-            <a href="#x"><img src="/images/search_icon.png" alt="" /></a>
-          </li>
-          <li>
-            <a href="#x"><img src="/images/cart_icon.png" alt="" /></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="visual">
-      <div class="slide">
-        <!-- 여기에 이미지 -->
-        <div class="text_box">
-          <h2>
-            Built <br />
-            for flight
-          </h2>
-          <p>
-            Introducing product name. <br />
-            Our lightest shoe, ever.
-          </p>
-          <button>SHOP</button>
-        </div>
-      </div>
-    </div>
-
-    <ul class="banners">
-      <li class="left">
-        <h2>Women</h2>
-        <a href="#x">
-          <span>Shop now</span>
-          <img src="/images/arrowblack_2.png" alt="" />
-        </a>
-      </li>
-      <li class="right">
-        <h2>Men</h2>
-        <a href="#x">
-          <span>Shop now</span>
-          <img src="/images/arrowblack_2.png" alt="" />
-        </a>
-      </li>
-    </ul>
-
-    <div class="product">
-      <h2>New releases</h2>
-      <ul class="product_list">
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="product">
-      <h2>Top kicks</h2>
-      <ul class="product_list">
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-        <li>
-          <img src="#x" alt="" />
-          <div class="detail">
-            <p class="pice">Product name</p>
-            <p class="name">$186 CAD</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="lifos"></div>
-    <div class="fotter">
-      <div class="inner">
-        <div class="menu">
-          <ul class="footer_menu">
+    <div class="container">
+      <div class="header">
+        <div class="inner">
+          <a class="loge" href="#x">
+            <img src="/images/logo.png" alt="" />
+          </a>
+          <ul class="nav">
+            <li><a href="#x">Women</a></li>
+            <li><a href="#x">Men</a></li>
+            <li><a href="#x">Kids</a></li>
+            <li><a href="#x">Accessories</a></li>
+            <li><a href="#x">Sale</a></li>
+          </ul>
+          <ul class="top_menu">
             <li>
-              <a href="#x">MY ACCOUNT</a>
-              <ul>
-                <li><a href="#x">Sign In</a></li>
-                <li><a href="#x">Register</a></li>
-                <li><a href="#x">Order status</a></li>
-              </ul>
+              <a href="#x"><img src="/images/search_icon.png" alt="" /></a>
             </li>
             <li>
-              <a href="#x">HELP</a>
-              <ul>
-                <li><a href="#x">Shipping</a></li>
-                <li><a href="#x">Returns</a></li>
-                <li><a href="#x">Sizing</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#x">ABOUT</a>
-              <ul>
-                <li><a href="#x">Our story</a></li>
-                <li><a href="#x">Media</a></li>
-                <li><a href="#x">Sustainability</a></li>
-              </ul>
-            </li>
-            <li>
-              <a href="#x">LEGAL STUFF</a>
-              <ul>
-                <li><a href="#x">Terms of use</a></li>
-                <li><a href="#x">Terms of sale</a></li>
-                <li><a href="#x">Privacy policy</a></li>
-              </ul>
+              <a href="#x"><img src="/images/cart_icon.png" alt="" /></a>
             </li>
           </ul>
-          <div class="footer_sns">
-            <p>FOLLOW SAM’S</p>
-            <ul>
-              <li>
-                <a href="#x"><img src="/images/Facebook.png" alt="" /></a>
-              </li>
-              <li>
-                <a href="#x"><img src="/images/Instagram.png" alt="" /></a>
-              </li>
-              <li>
-                <a href="#x"><img src="/images/Twitter.png" alt="" /></a>
-              </li>
-              <li>
-                <a href="#x"><img src="/images/LinkedIN.png" alt="" /></a>
-              </li>
-            </ul>
+        </div>
+      </div>
+
+      <div class="hero">
+        <div class="slide">
+          <!-- 여기에 이미지 -->
+          <div class="text_box">
+            <h2>
+              Built <br />
+              for flight
+            </h2>
+            <p>
+              Introducing product name. <br />
+              Our lightest shoe, ever.
+            </p>
+            <button>SHOP</button>
           </div>
         </div>
-        <div class="copyright">
-          <p>© 123 Fake Wireframes Inc. All Rights Reserved</p>
+      </div>
+
+      <div class="banner inner">
+        <ul>
+          <li class="left">
+            <h2>Women</h2>
+            <a href="#x">
+              <span>Shop now</span>
+              <img src="/images/arrowblack_2.png" alt="" />
+            </a>
+          </li>
+          <li class="right">
+            <h2>Men</h2>
+            <a href="#x">
+              <span>Shop now</span>
+              <img src="/images/arrowblack_2.png" alt="" />
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="product inner">
+        <h2>New releases</h2>
+        <ul class="product_list">
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="product inner">
+        <h2>Top kicks</h2>
+        <ul class="product_list">
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="#x" alt="" />
+            <div class="detail">
+              <p class="pice">Product name</p>
+              <p class="name">$186 CAD</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <div class="mailing">
+        <div class="text_box">
+          <h2>
+            Never miss <br />
+            a drop.
+          </h2>
+          <p>
+            Receive updates about new <br />
+            products and promotions.
+          </p>
+          <button>JOIN MAILING LIST</button>
+        </div>
+      </div>
+
+      <div class="fotter">
+        <div class="inner">
+          <div class="menu">
+            <ul class="footer_menu">
+              <li>
+                <a href="#x">MY ACCOUNT</a>
+                <ul>
+                  <li><a href="#x">Sign In</a></li>
+                  <li><a href="#x">Register</a></li>
+                  <li><a href="#x">Order status</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#x">HELP</a>
+                <ul>
+                  <li><a href="#x">Shipping</a></li>
+                  <li><a href="#x">Returns</a></li>
+                  <li><a href="#x">Sizing</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#x">ABOUT</a>
+                <ul>
+                  <li><a href="#x">Our story</a></li>
+                  <li><a href="#x">Media</a></li>
+                  <li><a href="#x">Sustainability</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#x">LEGAL STUFF</a>
+                <ul>
+                  <li><a href="#x">Terms of use</a></li>
+                  <li><a href="#x">Terms of sale</a></li>
+                  <li><a href="#x">Privacy policy</a></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="footer_sns">
+              <p>FOLLOW SAM’S</p>
+              <ul>
+                <li>
+                  <a href="#x"><img src="/images/Facebook.png" alt="" /></a>
+                </li>
+                <li>
+                  <a href="#x"><img src="/images/Instagram.png" alt="" /></a>
+                </li>
+                <li>
+                  <a href="#x"><img src="/images/Twitter.png" alt="" /></a>
+                </li>
+                <li>
+                  <a href="#x"><img src="/images/LinkedIN.png" alt="" /></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>© 123 Fake Wireframes Inc. All Rights Reserved</p>
+          </div>
         </div>
       </div>
     </div>
