--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="header">
         <div class="inner">
-          <a class="loge" href="#x">
+          <a class="logo" href="#x">
             <img src="/images/logo.png" alt="" />
           </a>
           <ul class="nav">
@@ -37,14 +37,14 @@
           <!-- 여기에 이미지 -->
           <div class="text_box">
             <h2>
-              Built <br />
+              Built<br />
               for flight
             </h2>
             <p>
-              Introducing product name. <br />
+              Introducing product name.<br />
               Our lightest shoe, ever.
             </p>
-            <button>SHOP</button>
+            <button class="btn btn_dark">SHOP</button>
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
             Receive updates about new <br />
             products and promotions.
           </p>
-          <button>JOIN MAILING LIST</button>
+          <button class="btn">JOIN MAILING LIST</button>
         </div>
       </div>
 
