--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
 
       <div class="banner inner">
         <ul>
-          <li class="left">
+          <li>
             <h2>Women</h2>
             <a href="#x">
               <span>Shop now</span>
-              <img src="/images/arrowblack_2.png" alt="" />
+              <img src="/images/arrow.png" alt="" />
             </a>
           </li>
-          <li class="right">
+          <li>
             <h2>Men</h2>
             <a href="#x">
               <span>Shop now</span>
-              <img src="/images/arrowblack_2.png" alt="" />
+              <img src="/images/arrow.png" alt="" />
             </a>
           </li>
         </ul>
@@ -72,38 +72,31 @@
         <h2>New releases</h2>
         <ul class="product_list">
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="#x" alt="" />
-            <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
         </ul>
@@ -113,38 +106,31 @@
         <h2>Top kicks</h2>
         <ul class="product_list">
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
           <li>
-            <img src="#x" alt="" />
+            <img src="/images/gray.png" alt="" />
             <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="#x" alt="" />
-            <div class="detail">
-              <p class="pice">Product name</p>
-              <p class="name">$186 CAD</p>
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
             </div>
           </li>
         </ul>
