--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-      <div class="fotter">
+      <div class="footer">
         <div class="inner">
           <div class="menu">
             <ul class="footer_menu">
