--- a/pages/sub.html
+++ b/pages/sub.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam's shoes</title>
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/sub.css" />
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="inner">
-          <a class="logo" href="#x">
+          <a class="logo" href="../index.html">
             <img src="/images/logo.png" alt="" />
           </a>
           <ul class="nav">
-            <li><a href="/pages/sub.html">Women</a></li>
-            <li><a href="/pages/sub.html">Men</a></li>
-            <li><a href="/pages/sub.html">Kids</a></li>
-            <li><a href="/pages/sub.html">Accessories</a></li>
-            <li><a href="/pages/sub.html">Sale</a></li>
+            <li><a href="#x">Women</a></li>
+            <li><a href="#x">Men</a></li>
+            <li><a href="#x">Kids</a></li>
+            <li><a href="#x">Accessories</a></li>
+            <li><a href="#x">Sale</a></li>
           </ul>
           <ul class="top_menu">
             <li>
@@ -31,123 +32,94 @@
           </ul>
         </div>
       </div>
-
-      <div class="hero">
-        <div class="slide">
-          <!-- 여기에 이미지 -->
-          <div class="text_box">
-            <h2>
-              Built<br />
-              for flight
-            </h2>
-            <p>
-              Introducing product name.<br />
-              Our lightest shoe, ever.
-            </p>
-            <button class="btn btn_dark">SHOP</button>
+      <div class="product_detail inner">
+        <div class="photo">
+          <img src="../images/product.png" alt="" class="product_img" />
+          <div class="btns">
+            <a href="#x"><img src="../images/arrowblack_1.png" alt="" /></a>
+            <a href="#x"><img src="../images/arrowblack_2.png" alt="" /></a>
           </div>
         </div>
+        <div class="info">
+          <div class="top">
+            <p class="category">Women / Sneakers</p>
+            <h2>Product name</h2>
+            <p class="price">$186 CAD</p>
+            <div class="size_title">
+              <p>Select size</p>
+              <a href="#x">Size guide</a>
+            </div>
+          </div>
+          <ul class="size">
+            <li>5</li>
+            <li>5.5</li>
+            <li>6</li>
+            <li>6.5</li>
+            <li>7</li>
+            <li>7.5</li>
+            <li>8</li>
+            <li>8.5</li>
+            <li>9</li>
+            <li>9.5</li>
+            <li>10</li>
+            <li>10.5</li>
+            <li>11</li>
+            <li>11.5</li>
+            <li>12</li>
+          </ul>
+          <button class="btn btn_dark btn_full">ADD TO CART</button>
+        </div>
       </div>
-
-      <div class="banner inner">
-        <ul>
-          <li>
-            <h2>Women</h2>
-            <a href="/pages/sub.html">
-              <span>Shop now</span>
-              <img src="/images/arrow.png" alt="" />
-            </a>
-          </li>
-          <li>
-            <h2>Men</h2>
-            <a href="/pages/sub.html">
-              <span>Shop now</span>
-              <img src="/images/arrow.png" alt="" />
-            </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="product inner">
-        <h2>New releases</h2>
-        <ul class="product_list">
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="product inner">
-        <h2>Top kicks</h2>
-        <ul class="product_list">
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-          <li>
-            <img src="/images/gray.png" alt="" />
-            <div class="detail">
-              <p class="name">Product name</p>
-              <p class="price">$186 CAD</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="mailing">
+      <div class="product_about inner">
         <div class="text_box">
           <h2>
-            Never miss <br />
-            a drop.
+            About this <br />
+            product
           </h2>
           <p>
-            Receive updates about new <br />
-            products and promotions.
+            Pellentesque ut purus diam. Sed in <br />
+            dui consequat enim venenatis <br />
+            pretium. Sed facilisis dui quis libero <br />
+            fermentum faucibus.
           </p>
-          <button class="btn">JOIN MAILING LIST</button>
         </div>
+        <ul class="photos">
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="product inner">
+        <h2>You may also like</h2>
+        <ul class="product_list">
+          <li>
+            <img src="/images/gray.png" alt="" />
+            <div class="detail">
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="/images/gray.png" alt="" />
+            <div class="detail">
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="/images/gray.png" alt="" />
+            <div class="detail">
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
+            </div>
+          </li>
+          <li>
+            <img src="/images/gray.png" alt="" />
+            <div class="detail">
+              <p class="name">Product name</p>
+              <p class="price">$186 CAD</p>
+            </div>
+          </li>
+        </ul>
       </div>
 
       <div class="footer">
